--- a/01-corp.yaml
+++ b/01-corp.yaml
@@ -13,25 +13,34 @@
     url: https://mkyong.com/spring/spring-propertysources-example/
   - title: Baeldung - Properties with Spring and Spring Boot
     url: https://www.baeldung.com/properties-with-spring
-  message: "The legacy ApplicationConfiguration class is being used in this application.
-    This is discouraged by the migration\n guidelines, and should be replaced by a
-    more standard approach using Spring's @PropertySource annotation and Environment
-    class:\n\n\n ```java\n @PropertySource(\"classpath:persistence.properties\")\n
-    public class PersistenceConfig {{\n @Autowired\n private Environment env;\n\n
-    @Bean\n public DataSource dataSource() {{\n final DriverManagerDataSource dataSource
-    = new DriverManagerDataSource();\n dataSource.setDriverClassName(env.getProperty(\"jdbc.driverClassName\"));\n
-    dataSource.setUrl(env.getProperty(\"jdbc.url\"));\n dataSource.setUsername(env.getProperty(\"jdbc.user\"));\n
-    dataSource.setPassword(env.getProperty(\"jdbc.password\"));\n\n return dataSource;\n
-    }}\n }}\n ```\n\n\n\n This allows externalizing the configuration in Kubernetes
-    by injecting it as a ConfigMap or a Secret in the lib directory from the\n container
-    running the Tomcat instance. Please take into account that, given the way Tomcat
-    classloader works, any properties files packaged within the WAR artifact\n will
-    take precedence over the files available in the lib directory. It would be advisable
-    to remove these files on the WAR to be deployed in Kubernetes.\n A good way to
-    do this would be by configuring a kubernetes profile in Maven that excludes the
-    properties files:\n\n\n ```xml\n \n ```\n \n This would ensure that the properties
-    files that the application uses are the ones inside the ConfigMap or Secret objects
-    to be injected in the Tomcat lib directory at deployment time."
+  message: |-
+    The legacy ApplicationConfiguration class is being used in this application. This is discouraged by the migration
+     guidelines, and should be replaced by a more standard approach using Spring's @PropertySource annotation and Environment class:
+
+
+     ```java
+     @PropertySource("classpath:persistence.properties")
+     public class PersistenceConfig {{
+     @Autowired
+     private Environment env;
+
+     @Bean
+     public DataSource dataSource() {{
+     final DriverManagerDataSource dataSource = new DriverManagerDataSource();
+     dataSource.setDriverClassName(env.getProperty("jdbc.driverClassName"));
+     dataSource.setUrl(env.getProperty("jdbc.url"));
+     dataSource.setUsername(env.getProperty("jdbc.user"));
+     dataSource.setPassword(env.getProperty("jdbc.password"));
+
+     return dataSource;
+     }}
+     }}
+     ```
+
+
+
+     This allows externalizing the configuration in Kubernetes by injecting it as a ConfigMap or a Secret in the lib directory from the
+     container running the Tomcat instance.
   ruleID: corporate-config-01000
   when:
     java.referenced:
